<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="36dp"
        android:contentDescription="@string/mccafe_blinds"
        app:srcCompat="@drawable/mccaf__logo" />

    <TextView
        android:id="@+id/TextViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/user_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"

        android:text="@string/EnterButton" />


</LinearLayout>